assets/ananke/css/custom.css
:root {
    --apb-blue: #0aa7c2
}

.apb-blue { color: var(--apb-blue); }

.bg-apb-blue { background-color: var(--apb-blue); }

.bg-beige-gray { background-color: #e6e0dc; }

h1 { color: var(--apb-blue); }
h2 { color: var(--apb-blue); }
h3 { color: var(--apb-blue); }
h4 { color: var(--apb-blue); }
h5 { color: var(--apb-blue); }
h6 { color: var(--apb-blue); }

.bg-right {
  background-position-x: right;
}

#site-logo {
  width: 25rem;
  max-width: 100%;
}

/* Drop-down nav menu reference: https://www.w3docs.com/snippets/css/how-to-create-a-drop-down-navigation-menu-with-css.html */

#navbar-container {
  height: 50px;
  margin: 0;
}

.navbar {
  height: 50px;
  padding: 0;
  margin: 0;
}

.navbar li {
  height: auto;
  width: 135px;
  float: left;
  text-align: center;
  list-style: none;
  padding: 0;
  margin: 0;
}

.navbar a {
  padding: 18px 0;
  border-left: 1px solid #ccc9c9;
  border-left: 1px solid #ccc9c9;
  text-decoration: none;
  color: white;
  display: block;
}

@media screen and (max-width: 1300px) {
  .navbar li {
    width: 120px;
  }
  .navbar a {
    font-size: 1rem;
  }
}

.navbar li:hover,
.navbar a:hover {
  background-color: #444444;
}

.navbar li ul {
  display: none;
  height: auto;
  margin: 0;
  padding: 0;
}

.navbar li:hover ul {
  display: block;
}

.navbar li ul li {
  background-color: #444444;
}

.navbar li ul li a {
  border: 1px solid #444444;
  border-top: 1px solid #c9d4d8;
}

.navbar li ul li a:hover {
  background-color: #a3a1a1;
}

/* /end navbar */

.line-break:before {
  content: '\a';
  white-space: pre;
}

.line-break {
  overflow: hidden;
}

#cta-call {
  width: 100%;
  display: flex;
  justify-content: center;
}

@media screen and (max-width: 480px) {

  #cta-call a img {
    display: none;
  }
  #cta-call a h2 {
    margin: 0;
  }
  .carousel-container {
    padding: 0;
  }
}

@media screen and (min-width: 480px) {

  #main-islamophobia{
    width: 60%;
  }
}

